# mercurius-p

./: Cargo.toml  LICENSE  README.md  tools.json
.github/workflows/: bump-version.yml  ci.yml
assets/: banner.txt
src/: cli.rs  command_builder.rs  executor.rs  lib.rs  main.rs  registry.rs  service.rs
src/config/: loader.rs  mod.rs  validator.rs
src/mcp/: handler.rs  json_rpc.rs  mod.rs  stdio.rs
src/model/: execution.rs  mod.rs  tool.rs
