[package]
name = "mercurius-p"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = "4.6.1"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "io-util", "time"] }
tracing = "0.1.44"
